[gd_scene load_steps=2 format=3 uid="uid://de5he6bamukbh"]

[ext_resource type="Script" path="res://Scenes/Dialogue/dialogue_box.gd" id="1_wna3y"]

[node name="DialogueBox" type="CanvasLayer"]
script = ExtResource("1_wna3y")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="BackgroundPanel" type="Panel" parent="MarginContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2

[node name="TextMarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TextLabel" type="Label" parent="MarginContainer/TextMarginContainer"]
layout_mode = 2
text = "test "

[node name="LetterDisplayTimer" type="Timer" parent="MarginContainer"]
one_shot = true

[connection signal="timeout" from="MarginContainer/LetterDisplayTimer" to="." method="_on_letter_display_timer_timeout"]
